finished fetching in homepage and shop page

--- a/intellispace/src/components/Components.css
+++ b/intellispace/src/components/Components.css
@@ -191,3 +191,13 @@ a {
     outline: none !important;
     box-shadow: none !important;
 }
+
+
+
+.navbar {
+    transition: background-color 0.3s, opacity 0.3s;
+  }
+  
+  .navbar.scrolled {
+    opacity: 0.9; 
+  }
