--- a/intellispace/src/pages/aboutpage/aboutus.css
+++ b/intellispace/src/pages/aboutpage/aboutus.css
@@ -16,13 +16,12 @@
   gap: 30px;
 }
 
-.aboutusinfo-section{
-    width: 100%;
-    margin-top: 40px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.aboutusinfo-section {
+  width: 100%;
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
-
 
 .aboutusinfo-part {
   width: 95%;
@@ -31,4 +30,15 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  font-size: 20px;
+}
+
+@media (max-width: 600px) {
+  .aboutusinfo-section {
+    grid-template-columns: 1fr;
+  }
+
+  .aboutusinfo-part {
+    font-size: 14px;
+  }
 }
