--- a/intellispace/src/pages/contactpage/contactpage.css
+++ b/intellispace/src/pages/contactpage/contactpage.css
@@ -12,7 +12,7 @@
 .contactus-info-part {
   width: 90%;
   margin: auto;
-  border: 1px solid #cccccc;
+  border: 1px solid rgba(204, 204, 204, 0.5); 
   border-radius: 16px;
   display: flex;
   flex-direction: column;
@@ -33,9 +33,8 @@
   padding-bottom: 20px;
 }
 .small-text {
-    font-size: 20px; 
-  }
-
+  font-size: 20px;
+}
 
 .map {
   border-radius: 16px;
@@ -45,15 +44,14 @@
   margin-bottom: 30px;
 }
 
-
 @media (max-width: 768px) {
-    .contactus-info {
-      grid-template-columns: 1fr;
-    }
-    .small-text {
-      font-size: 14px; 
-    }
-    .contactus-info{
-        gap: 20px;
-    }
+  .contactus-info {
+    grid-template-columns: 1fr;
   }
+  .small-text {
+    font-size: 14px;
+  }
+  .contactus-info {
+    gap: 20px;
+  }
+}
