--- a/intellispace/src/index.css
+++ b/intellispace/src/index.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
 
-body{
-    font-family: "Roboto", sans-serif;
+body {
+    font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
-}
+  }
