--- a/intellispace/src/pages/homepage/homepage.css
+++ b/intellispace/src/pages/homepage/homepage.css
@@ -16,7 +16,8 @@
 
 .homepage-firstsection img {
   width: 100%;
-  border-radius: 16px;
+  border-top-right-radius: 16px;
+  border-bottom-right-radius: 16px;
 }
 
 .homepage-firstsection-info {
@@ -143,6 +144,9 @@
   }
   .homepage-firstsection-info {
     text-align: center;
+  }
+  .homepage-firstsection img {
+    border-radius: 16px;
   }
   .homepage-firstsection {
     grid-template-columns: 1fr;
@@ -377,4 +381,7 @@ figure.snip1249.hover:after {
   transition-delay: 0.1s;
   -webkit-transform: skew(-45deg) translateX(-75%);
   transform: skew(-45deg) translateX(-75%);
+}
+figure.snip1249:hover i {
+  display: none;
 }
