--- a/intellispace/src/components/Components.css
+++ b/intellispace/src/components/Components.css
@@ -162,7 +162,7 @@ a {
   -moz-user-select: none !important;
   -ms-user-select: none !important;
   user-select: none !important;
-  background-color: #343a40 !important;
+  background-color: #2a74ed !important;
   border: 1px solid transparent !important;
   padding: 0.375rem 0.75rem !important;
   font-size: 1rem !important;
