enhanced the front a little bit and finished the dashboard basic design

--- a/intellispace/src/pages/login/userlogin.css
+++ b/intellispace/src/pages/login/userlogin.css
@@ -14,3 +14,9 @@ background: #eee;
 .user-login-label{
     color: black;
 }
+
+.register-link-register{
+    color: #2a74ed;
+    cursor: pointer;
+    text-decoration: underline;
+}
