finished the admin categories with get add delete update

--- a/intellispace/src/admindashboard/adminhome/adminhome.css
+++ b/intellispace/src/admindashboard/adminhome/adminhome.css
@@ -34,7 +34,7 @@ font-family: signika;
     width: 90%;
     height: 40%;
     border-radius: 10%;
-background-color: #F6E0ED;
+background-color: #F0EFE9;
 text-align: center;
 color: #4A415B;
 font-family: signika;
@@ -46,7 +46,7 @@ font-family: signika;
     width: 90%;
     height: 40%;
     border-radius: 3% 15% 3% 15%;
-background-color: #C8E6C9;
+background-color: #CEF3FC;
 text-align: center;
 color: #4A415B;
 font-family: signika;
