--- a/intellispace/src/admindashboard/admindashboardmain/admindashboard.css
+++ b/intellispace/src/admindashboard/admindashboardmain/admindashboard.css
@@ -1,66 +1,59 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Signika:wght@400;700&display=swap"); */
 
-
 .Admin-Dashboard {
-    width: 100vw;
-    height : 100vh;
-    /* background-color: #2a74ed; */
-    /* background-color: #0F50AD; */
-    background-color: #F0EFE9 ;
-    display: grid;
-    grid-template-columns: 20% 80%;
-  }
-  
-  
-  .Admin-sidebar {
-    display: flex;
-    flex-direction: column;
-    /* color: white; */
-    
-    color: #0F50AD;
-    width: 80%;
-    margin-left: auto;
-    margin-top: 50px;
-    align-items: start;
-    gap: 35px;
-  }
-  
-  .admin-dashboard-logo{
+  width: 100vw;
+  height: 100vh;
+  background-color: #f0efe9;
+  display: grid;
+  grid-template-columns: 20% 80%;
+}
+
+.Admin-sidebar {
+  display: flex;
+  flex-direction: column;
+  color: #0f50ad;
+  width: 80%;
+  margin-left: auto;
+  margin-top: 50px;
+  align-items: start;
+  gap: 35px;
+}
+
+.admin-dashboard-logo {
   height: 200px;
-  }
-  .Admin-sidebar-section {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    cursor: pointer
-  }
-  
-  .Admin-icons {
-    width: 40px;
-    height: 30px;
-  }
-  
-  .Admin-Display {
-    width: 100%;
-    height: 100%;
-    margin: auto;
-    /* background-color: #F0EFE9 ; */
-    background-color: white ;
-    border-radius: 30px;
-    overflow: scroll;
-  }
-  .Admin-Display::-webkit-scrollbar {
-    display: none;
-  }
-  
-  
-  .Admin-display-container{
-      width: 90%;
-      margin: auto;
-      height: 100%;
-  }
-  
-  .Admin-sidebar-section.selected {
-  color: black; 
-  }
-  
+}
+.Admin-sidebar-section {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.Admin-icons {
+  width: 40px;
+  height: 30px;
+}
+
+.Admin-Display {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  background-color: white;
+
+  border-bottom-left-radius: 30px;
+  border-top-left-radius: 30px;
+  overflow: scroll;
+}
+.Admin-Display::-webkit-scrollbar {
+  display: none;
+}
+
+.Admin-display-container {
+  width: 90%;
+  margin: auto;
+  height: 100%;
+}
+
+.Admin-sidebar-section.selected {
+  color: black;
+}
