--- a/intellispace/src/pages/homepage/homepage.css
+++ b/intellispace/src/pages/homepage/homepage.css
@@ -16,8 +16,8 @@
 
 .homepage-firstsection img {
   width: 100%;
-  border-top-right-radius: 16px;
-  border-bottom-right-radius: 16px;
+  border-top-left-radius: 16px;
+  border-bottom-left-radius: 16px;
 }
 
 .homepage-firstsection-info {
@@ -93,6 +93,7 @@
 
 .homepage-categories img {
   width: 95%;
+  max-width: 100%;
   margin: auto;
   border-radius: 16px;
 }
@@ -146,7 +147,10 @@
     text-align: center;
   }
   .homepage-firstsection img {
-    border-radius: 16px;
+
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+  border-bottom-left-radius: 0px;
   }
   .homepage-firstsection {
     grid-template-columns: 1fr;
@@ -168,14 +172,22 @@
   }
 
   .homepage-categories {
+
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    width: 80%;
     margin: auto;
   }
+
+
+  .homepage-category1,
+  .homepage-category2,
+  .homepage-category3{
+    max-width: 100%;
+    margin-top: 50px;
+  }
+
+
+
 
   .homepage-lastpart {
     grid-template-columns: 1fr;
