--- a/intellispace/src/pages/homepage/homepage.css
+++ b/intellispace/src/pages/homepage/homepage.css
@@ -207,7 +207,7 @@
   }
 }
 
-/* Icon set - http://ionicons.com */
+
 @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,500);
 figure.snip1249 {
@@ -217,21 +217,13 @@ figure.snip1249 {
   margin: 10px;
   min-width: 220px;
   max-width: 310px;
-  width: 100%;
-  background: #1a1a1a;
+ display: flex;
+ flex-direction: column;
+ justify-content: space-between;
+
   color: #ffffff;
   text-align: left;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-  background-image: -webkit-linear-gradient(
-    top,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.3) 100%
-  );
-  background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.3) 100%
-  );
   border-radius: 16px;
 }
 figure.snip1249 * {
