--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -147,10 +147,9 @@
     text-align: center;
   }
   .homepage-firstsection img {
-
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
-  border-bottom-left-radius: 0px;
+    border-bottom-left-radius: 0px;
   }
   .homepage-firstsection {
     grid-template-columns: 1fr;
@@ -172,22 +171,17 @@
   }
 
   .homepage-categories {
-
     display: flex;
     flex-direction: column;
     margin: auto;
   }
 
-
   .homepage-category1,
   .homepage-category2,
-  .homepage-category3{
+  .homepage-category3 {
     max-width: 100%;
     margin-top: 50px;
   }
-
-
-
 
   .homepage-lastpart {
     grid-template-columns: 1fr;
@@ -207,7 +201,6 @@
   }
 }
 
-
 @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,500);
 figure.snip1249 {
@@ -217,10 +210,9 @@ figure.snip1249 {
   margin: 10px;
   min-width: 220px;
   max-width: 310px;
- display: flex;
- flex-direction: column;
- justify-content: space-between;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   color: #ffffff;
   text-align: left;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
@@ -236,12 +228,11 @@ figure.snip1249 .image {
   position: relative;
   width: 100%;
   height: 270px;
-  
 }
 figure.snip1249 img {
-  width: 100%; 
+  width: 100%;
   height: 100%;
-  object-fit: cover; 
+  object-fit: cover;
 }
 figure.snip1249 i {
   position: absolute;
@@ -252,7 +243,6 @@ figure.snip1249 i {
   z-index: 2;
   -webkit-transition-delay: 0;
   transition-delay: 0;
-  
 }
 figure.snip1249 h3 {
   margin: 0;
@@ -394,4 +384,8 @@ figure.snip1249.hover:after {
 }
 figure.snip1249:hover i {
   display: none;
+}
+
+.raoul ul li {
+  display: flex;
 }
